@@ -94,6 +94,7 @@ Bug fixes:
 - PR#5806: ensure that backtrace tests are always run (testsuite)
 - PR#5810: error in switch printing when using -dclambda
 - PR#5858: Assert failure during typing of class
+- PR#5880: 'Genlex.make_lexer' documention mentions the wrong exception
 - PR#5891: support rectypes tag for mlpack (ocamlbuild)
 
 OCaml 4.00.1:
